--- a/sentry/templates/configmap-sentry.yaml
+++ b/sentry/templates/configmap-sentry.yaml
@@ -131,11 +131,11 @@ data:
     DATABASES = {
         "default": {
             "ENGINE": "sentry.db.postgres",
-            "NAME": {{ include "sentry.postgresql.database" . | quote }},
-            "USER": {{ include "sentry.postgresql.username" . | quote }},
+            "NAME": os.environ.get("POSTGRES_NAME", {{ include "sentry.postgresql.database" . | quote }}),
+            "USER": os.environ.get("POSTGRES_USER", {{ include "sentry.postgresql.username" . | quote }}),
             "PASSWORD": os.environ.get("POSTGRES_PASSWORD", {{ include "sentry.postgresql.password" . | quote }}),
-            "HOST": {{ include "sentry.postgresql.host" . | quote }},
-            "PORT": {{ template "sentry.postgresql.port" . }},
+            "HOST": os.environ.get("POSTGRES_HOST", {{ include "sentry.postgresql.host" . | quote }}),
+            "PORT": os.environ.get("POSTGRES_PORT", {{ template "sentry.postgresql.port" . }}),
             {{- if .Values.externalPostgresql.sslMode }}
             'OPTIONS': {
                 'sslmode': '{{ .Values.externalPostgresql.sslMode }}',
